@@ -21,6 +21,7 @@
 <!--        <version.eclipse.microprofile.graphql-client>1.1-SNAPSHOT</version.eclipse.microprofile.graphql-client>-->
         <version.eclipse.microprofile.metrics>3.0</version.eclipse.microprofile.metrics>
         <version.eclipse.microprofile.context-propagation>1.3</version.eclipse.microprofile.context-propagation>
+        <version.org.jboss.jandex>2.4.3.Final</version.org.jboss.jandex> <!-- won't be needed with SmallRye Parent v36 -->
         <version.smallrye-config>2.10.0</version.smallrye-config>
         <version.smallrye.metrics>3.0.4</version.smallrye.metrics>
         <version.smallrye-common>1.11.0</version.smallrye-common>
@@ -81,7 +82,6 @@
         <module>server</module>
         <module>client</module>
         <module>tools</module>
-        <module>power-annotations</module>
         <module>docs</module>
     </modules>
     
@@ -417,13 +417,6 @@
             <modules>
                 <module>server/integration-tests-jdk16</module>
             </modules>
-            <properties>
-                <!-- FIXME: hack to allow powerannotations TCK to pass on JDK 16 -->
-                <powerannotations.tck.argLine>--add-opens java.base/java.util=ALL-UNNAMED</powerannotations.tck.argLine>
-                <!-- FIXME: find out why Gradle build doesn't work on JDK 16 in GH actions,
-                        but seems to work locally -->
-                <skip.gradle.build>true</skip.gradle.build>
-            </properties>
         </profile>
 
         <profile>
